--- a/checkoutpage/contact.html
+++ b/checkoutpage/contact.html
@@ -142,6 +142,7 @@
           var email=document.querySelector("#continue").value
           console.log(email)
           localStorage.setItem("Email",email)
+          window.location.href="shipping.html";
       }
       var estimate=localStorage.getItem("total")
       var subtotal=document.querySelector("#subtotal")
